# sand

./: Cargo.toml
examples/basic/: .gitignore  Cargo.toml
examples/basic/android/: settings.gradle
examples/basic/android/app/: build.gradle
examples/basic/android/app/src/androidTest/java/com/ example/ basic/: ExampleInstrumentedTest.java
examples/basic/android/app/src/main/: AndroidManifest.xml
examples/basic/android/app/src/main/java/com/ example/ basic/: SandActivity.java
examples/basic/android/app/src/main/res/values/: themes.xml
examples/basic/android/app/src/main/res/values-night/: themes.xml
examples/basic/android/app/src/test/java/com/ example/ basic/: ExampleUnitTest.java
examples/basic/src/: lib.rs
sand/: Cargo.toml
sand/src/: lib.rs
sand_core/: Cargo.toml
sand_engine/: Cargo.toml
sand_engine/src/: engine.rs  input.rs  lib.rs
sand_renderer/: Cargo.toml
sand_renderer/src/: lib.rs
sand_widgets/: Cargo.toml
sand_widgets/src/: lib.rs  stateful_widget.rs  stateless_widget.rs  widget.rs
