[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
sand = { path="../../sand" }
ndk-glue = { version="0.6", features=["logger"] }
log = "0.4"
